--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "oldStartMethod": "ts-node src/index.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
@@ -14,6 +15,7 @@
     "@types/express": "4.17.13",
     "@types/faker": "^5.5.9",
     "@types/node": "16.11.11",
+    "nodemon": "^2.0.15",
     "prisma": "3.5.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
