--- a/package.json
+++ b/package.json
@@ -3,17 +3,25 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/index.ts | pino-pretty",
+    "dev2": "nodemon src/index.ts",
     "oldStartMethod": "ts-node src/index.ts",
     "auth": "ts-node prisma/auth.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "ajv": "^8.8.2",
     "argon2": "^0.28.3",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
-    "faker": "^5.5.3"
+    "faker": "^5.5.3",
+    "passport": "^0.5.0",
+    "pino": "^7.5.1",
+    "pino-http": "^6.3.3",
+    "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/faker": "^5.5.9",
     "@types/node": "16.11.11",
