--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@types/express": "4.17.13",
     "@types/faker": "^5.5.9",
     "@types/jsonwebtoken": "^8.5.6",
-    "@types/node": "16.11.11",
+    "@types/node": "^16.11.11",
     "@types/passport-jwt": "^3.0.6",
     "nodemon": "^2.0.15",
     "prisma": "^3.6.0",
