--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon src/app.ts",
     "dev2": "nodemon src/app.ts | pino-pretty",
     "keypair": "ts-node src/auth/generateKeyPair.ts",
-    "seed": "prisma db seed"
+    "seed": "prisma db seed",
+    "studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
