--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^3.6.0",
     "ajv": "^8.8.2",
+    "ajv-formats": "^2.1.1",
     "argon2": "^0.28.3",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
@@ -40,6 +41,9 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "prisma": "^3.6.0",
+    "prisma-dbml-generator": "^0.8.3",
+    "prisma-erd-generator": "^0.6.1",
+    "prisma-json-schema-generator": "^1.5.0",
     "ts-node": "10.4.0",
     "typescript": "4.5.2"
   },
