--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
+    "types": ["node"],
     "typeRoots": [
       "./src/generated"
     ]
