--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,15 @@
 {
   "parser": "@typescript-eslint/parser",
   "extends": [
-    "plugin:@typescript-eslint/recommended"
+    "plugin:@typescript-eslint/recommended",
+      "plugin:security/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
+  "plugins": [
+    "security"],
   "rules": {
 
   }
