large refactor of api and express app creation, broke actions into controllers, apis, dals, and services.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,21 @@
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
-    "types": ["node"],
+    "types": ["node", "jest"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "typeRoots": [
-      "./src/generated"
+      "./src/generated",
+      "./node_modules/.prisma/client/index.d.ts",
+      "./node_modules/@types"
     ]
   },
     "include": [
-      "src/**/*.ts"
+      "./src/**/*.ts"
     ],
     "exclude": [
       "node_modules"
