--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "dev2": "nodemon src/app.ts | pino-pretty",
+    "pino": "nodemon src/app.ts | pino-pretty",
     "keypair": "ts-node src/auth/generateKeyPair.ts",
     "debug": "ts-node src/auth/tokenDebug.ts",
     "seed": "prisma db seed",
     "studio": "prisma studio",
     "lint": "eslint src/**/*.ts",
-    "format": "eslint src/**/*.ts --fix"
+    "format": "eslint src/**/*.ts --fix",
+    "test": "jest"
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
@@ -33,6 +34,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/faker": "^5.5.9",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.11",
     "@types/passport-jwt": "^3.0.6",
@@ -40,14 +42,16 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.4.0",
     "eslint-plugin-security": "^1.4.0",
+    "jest": "^27.4.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.0",
     "prisma": "^3.6.0",
     "prisma-dbml-generator": "^0.8.3",
     "prisma-erd-generator": "^0.6.1",
     "prisma-json-schema-generator": "^1.5.0",
+    "ts-jest": "^27.1.1",
     "ts-node": "10.4.0",
-    "typescript": "4.5.2"
+    "typescript": "^4.5.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
