--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/app.ts",
-    "pino": "nodemon src/app.ts | pino-pretty",
-    "keypair": "ts-node src/auth/generateKeyPair.ts",
-    "debug": "ts-node src/auth/tokenDebug.ts",
+    "dev": "nodemon -r tsconfig-paths/register src/app.ts",
+    "pino": "nodemon -r tsconfig-paths/register src/app.ts | pino-pretty",
+    "keypair": "ts-node -r tsconfig-paths/register src/auth/generateKeyPair.ts",
+    "debug": "ts-node -r tsconfig-paths/register src/auth/tokenDebug.ts",
     "seed": "prisma db seed",
     "studio": "prisma studio",
     "lint": "eslint src/**/*.ts",
@@ -31,6 +31,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
     "@types/faker": "^5.5.9",
@@ -54,6 +55,7 @@
     "supertest": "^6.1.6",
     "ts-jest": "^27.1.1",
     "ts-node": "10.4.0",
+    "tsconfig-paths": "^3.12.0",
     "typescript": "^4.5.2"
   },
   "prisma": {
