--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,18 @@
 {
+  "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
     "sourceMap": true,
     "outDir": "dist",
     "strict": true,
     "lib": ["esnext"],
     "esModuleInterop": true,
     "types": ["node", "jest"],
-    "baseUrl": ".",
+    "baseUrl": "./",
+    "pretty": true,
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": [ "src/*"],
     },
     "typeRoots": [
-      "./src/generated",
       "./node_modules/.prisma/client/index.d.ts",
       "./node_modules/@types"
     ]
