--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
-    "@typescript-eslint/parser": "^5.5.0",
+    "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-security": "^1.4.0",
     "jest": "^27.4.3",
     "jest-mock-extended": "^2.0.4",
