--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tsconfig/node16": "^1.0.2",
     "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.13",
+    "@types/express-list-endpoints": "^6.0.0",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
@@ -45,6 +46,7 @@
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-security": "^1.4.0",
+    "express-list-endpoints": "^6.0.0",
     "jest": "^27.4.3",
     "jest-mock-extended": "^2.0.4",
     "nodemon": "^2.0.15",
