--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   },
   "dependencies": {
     "@prisma/client": "^3.6.0",
+    "@types/cookie-parser": "^1.4.2",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "argon2": "^0.28.3",
+    "cookie-parser": "^1.4.6",
+    "dayjs": "^1.10.7",
     "dotenv": "^10.0.0",
     "express": "4.17.1",
     "faker": "^5.5.3",
