--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "4.17.1",
     "faker": "^5.5.3",
     "fs": "^0.0.1-security",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.0",
     "passport-jwt": "^4.0.0",
@@ -39,6 +40,7 @@
     "@types/express": "4.17.13",
     "@types/express-list-endpoints": "^6.0.0",
     "@types/faker": "^5.5.9",
+    "@types/http-errors": "^1.8.1",
     "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.6",
     "@types/node": "^16.11.11",
