--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon src/app.ts",
-    "pino": "cross-env NODE_ENV=development nodemon src/app.ts | pino-pretty",
+    "pino": "cross-env NODE_ENV=development LOGGER=PINO nodemon src/app.ts | pino-pretty",
     "keypair": "ts-node src/auth/generateKeyPair.ts",
     "seed": "prisma db seed",
     "studio": "prisma studio",
