--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "jest -i --verbose",
     "prod": "node dist/app.js",
     "build": "tsc --build",
-    "clean": "tsc --build --clean"  
+    "clean": "tsc --build --clean"
   },
   "dependencies": {
     "@prisma/client": "^3.7.0",
@@ -36,6 +36,7 @@
     "pino": "^7.5.1",
     "pino-http": "^6.3.3",
     "pino-pretty": "^7.2.0",
+    "swagger-ui-express": "^4.3.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -50,6 +51,7 @@
     "@types/node": "^16.11.11",
     "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.5.0",
     "@typescript-eslint/parser": "^5.6.0",
     "cuid": "^2.1.8",
